# AggregatorSJ

./: Cargo.toml
src/: lib.rs  main.rs
src/api/: coingecko.rs
src/models/: cache.rs
src/services/: price_service.rs
src/utils/: display.rs
